test/spec_vectors/simd_bitwise/fail/module_10.wat
(module (func (result v128) (v128.xor (i32.const 0) (i32.const 0))))